Fix footer spacing

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -18,6 +18,7 @@ header {
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  padding-bottom: 0.5rem;
   margin-bottom: 1rem;
   border-bottom: 1px solid lawngreen;
 }
@@ -86,8 +87,8 @@ header nav a:hover {
   gap: 16px;
   place-items: center;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  margin: 1rem;
 }
-
 
 .shell {
   margin-top: 1em;
@@ -120,6 +121,10 @@ header nav a:hover {
   text-decoration: underline;
 }
 
+.spacer {
+  flex-grow: 1;
+}
+
 .footer {
   position: static;
   left: 0;
@@ -128,7 +133,7 @@ header nav a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: auto;
+  margin-top: 1rem;
   border-top: 1px solid lawngreen;
   padding-top: 0.5rem;
 }
